--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,8 +9,7 @@ platform :ios, '13.0'
 
 target 'PWManager_Example' do
   pod 'PWManager/normal', :path => '../'
-#  pod 'PWManager/OOG101', :path => '../'
-  pod 'PWManager/template', :path => '../'
+  pod 'PWManager/OOG104', :path => '../'
   target 'PWManager_Tests' do
     inherit! :search_paths
 
