--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,6 +10,10 @@ platform :ios, '13.0'
 target 'PWManager_Example' do
   pod 'PWManager/normal', :path => '../'
   pod 'PWManager/OOG104', :path => '../'
+#  pod 'PWManager/template', :path => '../'
+#  pod 'PWManager/normal', :git => 'git@github.com:chaichai9323/PWManager.git'
+#  pod 'PWManager/OOG104', :git => 'git@github.com:chaichai9323/PWManager.git'
+  
   target 'PWManager_Tests' do
     inherit! :search_paths
 
