--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 Example/Pods
 Example/PWManager.xcodeproj/xcshareddata
-Example/PWManager.xcodeproj
 Example/PWManager.xcworkspace/xcshareddata
 Example/PWManager.xcworkspace/xcuserdata
+contents.xcworkspacedata
